syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "TableSchemaHistoryProto";
option java_multiple_files = true;

import "record_metadata_options.proto";
import "common/schema_info.proto";

//-----------------stored table-----------------------------
message TableSchemaHistory {
  required string event_id = 1;
  optional bytes version = 2;
  required SchemaInfo schema = 3;
}

message TableSchemaHistoryUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required TableSchemaHistory _tableSchemaHistory = 1;
}
